# SkySearch

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  cliff.toml  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/scripts/bash/: lifecycle.sh
.specify/templates/: plan.md  spec.md  tasks.md
docs/: GEOGRAPHICAL_EXPANSION_PLAN.md  WEEKLY_GROWTH_OUTREACH_PLAN.md
specs/001-skysearch-core/: agents.md  data-model.md  plan.md  research.md  skills.md  spec.md  tasks.md
tests/: test_app.py
